--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -35,7 +35,7 @@ endif()
 string(TOLOWER "${MOONVST_PRODUCT}" MOONVST_PRODUCT_SAFE)
 string(REPLACE "-" "_" MOONVST_PRODUCT_TARGET_SUFFIX "${MOONVST_PRODUCT_SAFE}")
 set(MOONVST_PLUGIN_TARGET "MoonVST_${MOONVST_PRODUCT_TARGET_SUFFIX}")
-set(MOONVST_PLUGIN_NAME "MoonVST-${MOONVST_PRODUCT_SAFE}")
+set(MOONVST_PLUGIN_NAME "${MOONVST_PRODUCT_SAFE}")
 string(MD5 MOONVST_PRODUCT_HASH "${MOONVST_PRODUCT_SAFE}")
 string(SUBSTRING "${MOONVST_PRODUCT_HASH}" 0 4 MOONVST_PLUGIN_CODE)
 string(TOUPPER "${MOONVST_PLUGIN_CODE}" MOONVST_PLUGIN_CODE)
