--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -115,6 +115,7 @@ target_compile_definitions(${MOONVST_PLUGIN_TARGET} PUBLIC
     JUCE_WEB_BROWSER=1
     JUCE_USE_CURL=0
     JUCE_VST3_CAN_REPLACE_VST2=0
+    MOONVST_PRODUCT_NAME="${MOONVST_PRODUCT_SAFE}"
 )
 
 if(WIN32)
